Trying to get ManBot loaded from scene

--- a/ECGameFramework/Assets/Scenes/RiotScene/RiotScene.plist
+++ b/ECGameFramework/Assets/Scenes/RiotScene/RiotScene.plist
@@ -7,332 +7,18 @@
 		<dict>
 			<key>goodPathNodeNames</key>
 			<array>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point06</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point07</string>
+				<string>manBot1_point01</string>
 			</array>
 			<key>badPathNodeNames</key>
 			<array>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point07</string>
-				<string>groundBot1_point06</string>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point01</string>
+				<string>manBot1_point01</string>
 			</array>
 			<key>startsBad</key>
 			<false/>
 			<key>initialOrientation</key>
 			<string>East</string>
 			<key>locomotion</key>
-			<string>ground</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point06</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point07</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point06</string>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point07</string>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point01</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>East</string>
-			<key>locomotion</key>
-			<string>ground</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point06</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point07</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point07</string>
-				<string>groundBot1_point06</string>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point01</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>East</string>
-			<key>locomotion</key>
-			<string>ground</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point06</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point07</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point06</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point07</string>
-			</array>
-			<key>startsBad</key>
-			<true/>
-			<key>initialOrientation</key>
-			<string>East</string>
-			<key>locomotion</key>
-			<string>ground</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point06</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point07</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point06</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point07</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>East</string>
-			<key>locomotion</key>
-			<string>ground</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point06</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point07</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point06</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point07</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>East</string>
-			<key>locomotion</key>
-			<string>ground</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point06</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point07</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point06</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point07</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>East</string>
-			<key>locomotion</key>
-			<string>ground</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point07</string>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point06</string>
-				<string>groundBot1_point03</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point06</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point07</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>East</string>
-			<key>locomotion</key>
-			<string>ground</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point07</string>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point06</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point06</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point07</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>East</string>
-			<key>locomotion</key>
-			<string>ground</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point06</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point07</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point06</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point07</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>East</string>
-			<key>locomotion</key>
-			<string>ground</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point06</string>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point07</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point06</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point07</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>East</string>
-			<key>locomotion</key>
-			<string>ground</string>
+			<string>man</string>
 		</dict>
 	</array>
 	<key>proximityFactor</key>
