Trying to get ManBot loaded from RiotScene

--- a/ECGameFramework/Assets/Scenes/SceneConfiguration.plist
+++ b/ECGameFramework/Assets/Scenes/SceneConfiguration.plist
@@ -16,7 +16,7 @@
 		<key>onDemandResourcesTags</key>
 		<array>
 			<string>Level1</string>
-			<string>GroundBot</string>
+			<string>ManBot</string>
 			<string>Blue</string>
 		</array>
 	</dict>
