--- a/ECGameFramework/Assets/Scenes/RiotScene/RiotScene.plist
+++ b/ECGameFramework/Assets/Scenes/RiotScene/RiotScene.plist
@@ -19,7 +19,7 @@
 			<key>startsBad</key>
 			<false/>
 			<key>initialOrientation</key>
-			<string>East</string>
+			<string>North</string>
 			<key>locomotion</key>
 			<string>man</string>
 		</dict>
@@ -41,7 +41,7 @@
 			<key>initialOrientation</key>
 			<string>East</string>
 			<key>locomotion</key>
-			<string>ground</string>
+			<string>man</string>
 		</dict>
 	</array>
 	<key>proximityFactor</key>
