add GroundBot to make obstacle avoidance.

--- a/ECGameFramework/Assets/Scenes/SceneConfiguration.plist
+++ b/ECGameFramework/Assets/Scenes/SceneConfiguration.plist
@@ -18,6 +18,7 @@
 			<string>Level1</string>
 			<string>Blue</string>
 			<string>ManBot</string>
+			<string>GroundBot</string>
 		</array>
 	</dict>
 	<dict>
