--- a/ECGameFramework/Assets/Scenes/RiotScene/RiotScene.plist
+++ b/ECGameFramework/Assets/Scenes/RiotScene/RiotScene.plist
@@ -7,20 +7,55 @@
 		<dict>
 			<key>goodPathNodeNames</key>
 			<array>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point03</string>
 				<string>groundBot1_point04</string>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point06</string>
-				<string>groundBot1_point07</string>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point09</string>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point03</string>
 			</array>
 			<key>badPathNodeNames</key>
 			<array>
 				<string>groundBot1_point03</string>
-				<string>groundBot1_point05</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point04</string>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point03</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
 			</array>
 			<key>startsBad</key>
 			<false/>
@@ -36,21 +71,457 @@
 				<string>groundBot1_point02</string>
 				<string>groundBot1_point03</string>
 				<string>groundBot1_point04</string>
-				<string>groundBot1_point05</string>
-				<string>groundBot1_point06</string>
-				<string>groundBot1_point07</string>
-				<string>groundBot1_point08</string>
-				<string>groundBot1_point09</string>
 			</array>
 			<key>badPathNodeNames</key>
 			<array>
 				<string>groundBot1_point03</string>
-				<string>groundBot1_point05</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point04</string>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point03</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point04</string>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point03</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point04</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>locomotion</key>
+			<string>man</string>
+		</dict>
+		<dict>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point04</string>
+			</array>
+			<key>New item</key>
+			<string>groundBot1_point02</string>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
 			</array>
 			<key>startsBad</key>
 			<true/>
 			<key>initialOrientation</key>
-			<string>East</string>
+			<string>South</string>
 			<key>locomotion</key>
 			<string>man</string>
 		</dict>
