Add support for PoliceBot resource loading

--- a/ECGameFramework/Assets/Scenes/SceneConfiguration.plist
+++ b/ECGameFramework/Assets/Scenes/SceneConfiguration.plist
@@ -17,6 +17,7 @@
 		<array>
 			<string>Level1</string>
 			<string>Blue</string>
+			<string>PoliceBot</string>
 			<string>ManBot</string>
 			<string>GroundBot</string>
 		</array>
