--- a/ECGameFramework/Assets/Scenes/RiotScene/RiotScene.plist
+++ b/ECGameFramework/Assets/Scenes/RiotScene/RiotScene.plist
@@ -5,6 +5,8 @@
 	<key>taskBotConfigurations</key>
 	<array>
 		<dict>
+			<key>temperament</key>
+			<string>Angry</string>
 			<key>goodPathNodeNames</key>
 			<array>
 				<string>groundBot1_point04</string>
@@ -25,26 +27,8 @@
 			<string>man</string>
 		</dict>
 		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point04</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
+			<key>temperament</key>
+			<string>Calm</string>
 			<key>goodPathNodeNames</key>
 			<array>
 				<string>groundBot1_point04</string>
@@ -52,467 +36,6 @@
 				<string>groundBot1_point01</string>
 				<string>groundBot1_point03</string>
 			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point04</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point04</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point03</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point04</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point04</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point04</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point04</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point04</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point04</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point04</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point04</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point04</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point04</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point04</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point04</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point04</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point04</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point04</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point04</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point04</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point03</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point04</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point02</string>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point04</string>
-			</array>
-			<key>badPathNodeNames</key>
-			<array>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point02</string>
-			</array>
-			<key>startsBad</key>
-			<false/>
-			<key>initialOrientation</key>
-			<string>South</string>
-			<key>locomotion</key>
-			<string>man</string>
-		</dict>
-		<dict>
-			<key>goodPathNodeNames</key>
-			<array>
-				<string>groundBot1_point01</string>
-				<string>groundBot1_point03</string>
-				<string>groundBot1_point04</string>
-			</array>
-			<key>New item</key>
-			<string>groundBot1_point02</string>
 			<key>badPathNodeNames</key>
 			<array>
 				<string>groundBot1_point03</string>
@@ -523,7 +46,7 @@
 			<key>initialOrientation</key>
 			<string>South</string>
 			<key>locomotion</key>
-			<string>man</string>
+			<string>police</string>
 		</dict>
 	</array>
 	<key>proximityFactor</key>
