--- a/ECGameFramework/Assets/Scenes/SceneConfiguration.plist
+++ b/ECGameFramework/Assets/Scenes/SceneConfiguration.plist
@@ -18,8 +18,7 @@
 			<string>Level1</string>
 			<string>Blue</string>
 			<string>PoliceBot</string>
-			<string>ManBot</string>
-			<string>GroundBot</string>
+			<string>ProtestorBot</string>
 		</array>
 	</dict>
 	<dict>
