--- a/ECGameFramework/Assets/Scenes/RiotScene/RiotScene.plist
+++ b/ECGameFramework/Assets/Scenes/RiotScene/RiotScene.plist
@@ -18,6 +18,7 @@
 			<array>
 				<string>groundBot1_point03</string>
 				<string>groundBot1_point02</string>
+				<string>groundBot1_point01</string>
 			</array>
 			<key>startsBad</key>
 			<false/>
@@ -40,6 +41,7 @@
 			<array>
 				<string>groundBot1_point03</string>
 				<string>groundBot1_point02</string>
+				<string>groundBot1_point01</string>
 			</array>
 			<key>startsBad</key>
 			<true/>
