--- a/ECGameFramework/Assets/Scenes/Level3/Level3.plist
+++ b/ECGameFramework/Assets/Scenes/Level3/Level3.plist
@@ -13,7 +13,7 @@
 	<key>taskBotConfigurations</key>
 	<array>
 		<dict>
-			<key>locomotion</key>
+			<key>botType</key>
 			<string>ground</string>
 			<key>initialOrientation</key>
 			<string>West</string>
@@ -35,7 +35,7 @@
 			</array>
 		</dict>
 		<dict>
-			<key>locomotion</key>
+			<key>botType</key>
 			<string>ground</string>
 			<key>initialOrientation</key>
 			<string>South</string>
@@ -57,7 +57,7 @@
 			</array>
 		</dict>
 		<dict>
-			<key>locomotion</key>
+			<key>botType</key>
 			<string>ground</string>
 			<key>initialOrientation</key>
 			<string>East</string>
@@ -79,7 +79,7 @@
 			</array>
 		</dict>
 		<dict>
-			<key>locomotion</key>
+			<key>botType</key>
 			<string>ground</string>
 			<key>initialOrientation</key>
 			<string>North</string>
@@ -101,7 +101,7 @@
 			</array>
 		</dict>
 		<dict>
-			<key>locomotion</key>
+			<key>botType</key>
 			<string>flying</string>
 			<key>initialOrientation</key>
 			<string>South</string>
@@ -139,7 +139,7 @@
 			</array>
 		</dict>
 		<dict>
-			<key>locomotion</key>
+			<key>botType</key>
 			<string>flying</string>
 			<key>initialOrientation</key>
 			<string>West</string>
@@ -177,7 +177,7 @@
 			</array>
 		</dict>
 		<dict>
-			<key>locomotion</key>
+			<key>botType</key>
 			<string>flying</string>
 			<key>initialOrientation</key>
 			<string>North</string>
@@ -215,7 +215,7 @@
 			</array>
 		</dict>
 		<dict>
-			<key>locomotion</key>
+			<key>botType</key>
 			<string>flying</string>
 			<key>initialOrientation</key>
 			<string>East</string>
