--- a/ECGameFramework/Assets/Scenes/Level4/Level4.plist
+++ b/ECGameFramework/Assets/Scenes/Level4/Level4.plist
@@ -13,7 +13,7 @@
 	<key>taskBotConfigurations</key>
 	<array>
 		<dict>
-			<key>locomotion</key>
+			<key>botType</key>
 			<string>flying</string>
 			<key>initialOrientation</key>
 			<string>North</string>
@@ -33,7 +33,7 @@
 			</array>
 		</dict>
 		<dict>
-			<key>locomotion</key>
+			<key>botType</key>
 			<string>flying</string>
 			<key>initialOrientation</key>
 			<string>North</string>
@@ -55,7 +55,7 @@
 			</array>
 		</dict>
 		<dict>
-			<key>locomotion</key>
+			<key>botType</key>
 			<string>flying</string>
 			<key>initialOrientation</key>
 			<string>North</string>
@@ -77,7 +77,7 @@
 			</array>
 		</dict>
 		<dict>
-			<key>locomotion</key>
+			<key>botType</key>
 			<string>flying</string>
 			<key>initialOrientation</key>
 			<string>North</string>
@@ -99,7 +99,7 @@
 			</array>
 		</dict>
 		<dict>
-			<key>locomotion</key>
+			<key>botType</key>
 			<string>flying</string>
 			<key>initialOrientation</key>
 			<string>North</string>
@@ -123,7 +123,7 @@
 			</array>
 		</dict>
 		<dict>
-			<key>locomotion</key>
+			<key>botType</key>
 			<string>flying</string>
 			<key>initialOrientation</key>
 			<string>East</string>
