Load CriminalBot resources on demand

--- a/ECGameFramework/Assets/Scenes/SceneConfiguration.plist
+++ b/ECGameFramework/Assets/Scenes/SceneConfiguration.plist
@@ -19,6 +19,7 @@
 			<string>Blue</string>
 			<string>PoliceBot</string>
 			<string>ProtestorBot</string>
+			<string>CriminalBot</string>
 		</array>
 	</dict>
 	<dict>
