--- a/ECGameFramework/Assets/Scenes/RiotScene/RiotScene.plist
+++ b/ECGameFramework/Assets/Scenes/RiotScene/RiotScene.plist
@@ -25,6 +25,29 @@
 			<key>initialOrientation</key>
 			<string>South</string>
 			<key>botType</key>
+			<string>criminal</string>
+		</dict>
+		<dict>
+			<key>temperament</key>
+			<string>Calm</string>
+			<key>goodPathNodeNames</key>
+			<array>
+				<string>groundBot1_point04</string>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point01</string>
+				<string>groundBot1_point03</string>
+			</array>
+			<key>badPathNodeNames</key>
+			<array>
+				<string>groundBot1_point03</string>
+				<string>groundBot1_point02</string>
+				<string>groundBot1_point01</string>
+			</array>
+			<key>startsBad</key>
+			<false/>
+			<key>initialOrientation</key>
+			<string>South</string>
+			<key>botType</key>
 			<string>protestor</string>
 		</dict>
 		<dict>
